refactered some test